# mcp-oauth-setup

./: .gitignore  README-Docker.md  README.md  build-docker.sh  docker-compose.yml  progress.md  well-known.md
.opencode/: opencode.db-shm  opencode.db-wal
kubernetes/: client-job.yaml  server-deployment.yaml
mcp-okta-backend/: .env.example  mcp_backend.py  pyproject.toml
mcp-okta-client/: .dockerignore  .env.example  Dockerfile  Dockerfile.optimized  main.py  mcp_client.py  okta_oauth_provider.py  pyproject.toml  test_token.py
mcp-okta-server/: .env.example  Dockerfile  Dockerfile.optimized  dpop.md  internals.md  mcp_server.py  okta_token_verifier.py  pyproject.toml  todo.md
